--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ packaging==21.3
 pandas==1.5.0
 Pillow==9.2.0
 protobuf==3.20.3
+pushbullet.py==0.12.0
 pyarrow==9.0.0
 pycparser==2.21
 pydeck==0.8.0b3
@@ -42,6 +43,7 @@ pyrsistent==0.18.1
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==0.21.0
+python-magic==0.4.27
 pytz==2022.4
 pytz-deprecation-shim==0.1.0.post0
 requests==2.28.1
@@ -67,5 +69,6 @@ urllib3==1.26.12
 validators==0.20.0
 watchdog==2.1.9
 webdriver-manager==3.8.2
+websocket-client==1.4.2
 wsproto==1.2.0
 zipp==3.8.1
